[package]
name = "cruzos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] } # TODO: change to bootloader_api v0.11
futures = { version = "0.3.30", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pic8259 = "0.11.0"
spin = { version = "0.9.8", features = ["fair_mutex"] }
uart_16550 = "0.3.0"
x86_64 = { version = "0.15.1", features = ["abi_x86_interrupt"] }


# this enables us to make QEMU exit after running tests when cargo test is called
[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
run-args = ["-serial", "stdio"]
test-success-exit-code = 33 # (0x10 << 1 | 1 = 33)
test-timeout = 30

